# signalbot

./: .env.example  .gitignore  AGENTS.md  IDENTITY.md  LICENSE  MEMORY.md  PRD.md  PRODUCTION_PLAN.md  README.md  SOUL.md  USER.md  config.example.json  increase_position.mjs  index.html  index.mjs  netlify.toml  package-lock.json  package.json  setup.mjs
.github/workflows/: build.yml
api/: .env.example  schema.sql
api/lib/: email.mjs
apps/hl-signalbot/: .env.example  .gitignore  PRD.md  README.md  cli.mjs  config.json  increase_position.mjs  index.mjs  package.json  signal_engine.mjs  state.json
apps/polymarket-trader/: README.md
bot/: CONFIGURATION.md  cli.mjs  close.mjs  config.example.json  hl_info.mjs  index.mjs  package-lock.json  package.json  position_sizing.test.mjs  setup.mjs  signal_engine.mjs  signal_engine.test.mjs  ui.mjs
documents/c13-memory/: session-initialization-rule.mmd
hl-signalbot/: .gitignore  README.md  index.mjs  package.json
hl-signalbot/config/: config.example.json
hl-signalbot/scripts/: run.sh
memory/: 2026-01-30.md  2026-01-31.md
netlify/functions/: activate.mjs  validate.mjs  webhook-stripe.mjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: bot.js  config.js
src/pages/: Dashboard.jsx  License.jsx  Settings.jsx  Setup.jsx  TradeLog.jsx
web/: .env.example  .gitignore  home.html  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  (+1 more)
(+26 files in other folders)
