[package]
name = "hl-signalbot"
version = "1.0.1"
description = "HL Signalbot Desktop App"
authors = ["jtadiar"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
dirs = "6"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
